--- a/frontend/table_pages/table_index.html
+++ b/frontend/table_pages/table_index.html
@@ -1,11 +1,6 @@
-<!-- https://learndjango.com/tutorials/django-static-files -->
-
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-
-
 
 <head>
   <meta charset="UTF-8">
@@ -21,7 +16,7 @@
 
 <header>
   <!-- Fixed navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="kek-mek">
     <a class="btn btn-outline-success my-2 my-sm-0" href="{% url 'logout' %}">Log Out</a>
     <ul></ul>
     <a class="btn btn-outline-success my-2 my-sm-0" href="https://t.me/Django_Pycab_bot" target="_blank">Telegram
